--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 			<version>3.141.59</version>
 		</dependency>
 
-		<dependency>
+		<dependency>z
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.9.8</version>
@@ -139,4 +139,17 @@
 
 
 	</dependencies>
+	<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.6.3</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
