--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+					<skipTests>true</skipTests>
 				</configuration>
 			</plugin>
 		</plugins>
